--- a/EventGuru02/Fahad/Fahad-Event Posting.storyboard
+++ b/EventGuru02/Fahad/Fahad-Event Posting.storyboard
@@ -23,7 +23,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Ll-bs-BHC">
-                                <rect key="frame" x="153" y="315.33333333333331" width="224" height="34"/>
+                                <rect key="frame" x="153" y="319.33333333333331" width="224" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -34,7 +34,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="vGb-64-eO7">
-                                <rect key="frame" x="153" y="364.33333333333331" width="224" height="128"/>
+                                <rect key="frame" x="153" y="368.33333333333331" width="224" height="128"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="lsV-md-LDG"/>
@@ -60,17 +60,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r7p-WQ-sX3">
-                                <rect key="frame" x="153" y="542.33333333333337" width="224" height="34"/>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r7p-WQ-sX3">
+                                <rect key="frame" x="153" y="533" width="224" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Category:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g65-WG-0eI">
-                                <rect key="frame" x="17" y="575" width="75" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Start Date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MQS-CD-x0S">
                                 <rect key="frame" x="17" y="630" width="82" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -84,13 +78,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="0Ku-zl-wd7">
-                                <rect key="frame" x="178" y="634.33333333333337" width="185" height="36"/>
+                                <rect key="frame" x="178" y="638.33333333333337" width="185" height="38"/>
                             </datePicker>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Lsg-qe-p0a">
-                                <rect key="frame" x="178" y="678.33333333333337" width="185" height="36"/>
+                                <rect key="frame" x="178" y="684.33333333333337" width="185" height="38"/>
                             </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0r9-nE-R2t">
-                                <rect key="frame" x="135" y="732.33333333333337" width="122" height="34.333333333333371"/>
+                                <rect key="frame" x="135" y="740.33333333333337" width="122" height="38.333333333333371"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Create Event"/>
                                 <connections>
@@ -98,13 +92,25 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i6R-1G-RRp">
-                                <rect key="frame" x="238" y="269" width="139" height="34.333333333333314"/>
+                                <rect key="frame" x="238" y="269" width="139" height="38.333333333333314"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="Add Thumbnail"/>
                                 <connections>
                                     <action selector="selectPhoto:" destination="TaN-va-PD1" eventType="touchUpInside" id="04r-lX-7n3"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jIB-T3-IPR">
+                                <rect key="frame" x="154" y="582" width="224" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Category:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g65-WG-0eI">
+                                <rect key="frame" x="15" y="589" width="75" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="e87-W9-ebQ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -154,12 +160,13 @@
                     </view>
                     <navigationItem key="navigationItem" id="zng-qa-Ias"/>
                     <connections>
+                        <outlet property="Category" destination="jIB-T3-IPR" id="aen-LB-Dow"/>
+                        <outlet property="Description" destination="vGb-64-eO7" id="bjt-rT-3c9"/>
                         <outlet property="endDatePicker" destination="Lsg-qe-p0a" id="oHF-oR-lds"/>
                         <outlet property="eventName" destination="5Ll-bs-BHC" id="kod-GV-8vA"/>
                         <outlet property="location" destination="r7p-WQ-sX3" id="OzZ-jI-pFk"/>
                         <outlet property="price" destination="H4Q-rn-d73" id="Jpu-Bj-nbL"/>
                         <outlet property="startDatePicker" destination="0Ku-zl-wd7" id="8z4-sC-R0Q"/>
-                        <outlet property="textView" destination="vGb-64-eO7" id="y7z-Y0-7Yk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qci-tz-KCr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
