--- a/EventGuru02/Ali/Ali.storyboard
+++ b/EventGuru02/Ali/Ali.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EgB-wn-MPX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JbD-bm-LQD">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
@@ -126,7 +126,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3692.3664122137402" y="-8.4507042253521139"/>
+            <point key="canvasLocation" x="4619.0839694656488" y="-8.4507042253521139"/>
         </scene>
         <!--Buy Ticket View Controller-->
         <scene sceneID="Gft-zg-szX">
@@ -276,7 +276,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aUf-vK-xHH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="898" y="20"/>
+            <point key="canvasLocation" x="-384" y="58"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="gBi-eI-Pwt">
@@ -421,7 +421,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KYj-MS-jp5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2362.5954198473282" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="3289.3129770992364" y="-2.1126760563380285"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="KVz-wt-XuK">
@@ -574,7 +574,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cJ6-ae-bUe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3002.2900763358775" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="3927.480916030534" y="-2.1126760563380285"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Uar-qJ-Jcp">
@@ -719,7 +719,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NKa-Tg-eu9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2362.5954198473282" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="3289.3129770992364" y="-2.1126760563380285"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="JKY-dB-HhW">
@@ -872,7 +872,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jSR-1A-Xk8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3002.2900763358775" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="3927.480916030534" y="-2.1126760563380285"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="653-Nc-FJv">
@@ -1014,28 +1014,29 @@
                         <viewLayoutGuide key="safeArea" id="XTM-ga-pUm"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="n1c-Du-iso"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oSJ-bm-DfQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1614.5038167938931" y="19.718309859154932"/>
+            <point key="canvasLocation" x="2541.2213740458014" y="19.718309859154932"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="uKK-In-Roe">
+        <scene sceneID="Rro-c3-6wI">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EgB-wn-MPX" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JbD-bm-LQD" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7cj-5I-kMg">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oOH-xz-xMA">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="ce7-Qc-qDi" kind="relationship" relationship="rootViewController" id="vKJ-hd-DwG"/>
+                        <segue destination="q5W-rL-ypC" kind="relationship" relationship="rootViewController" id="rzk-sd-fYj"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xnc-kt-eP9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZEc-g8-Ras" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="16" y="20"/>
+            <point key="canvasLocation" x="1614.5038167938931" y="19.718309859154932"/>
         </scene>
     </scenes>
     <resources>
