--- a/EventGuru02/Yousif/AdminDash.storyboard
+++ b/EventGuru02/Yousif/AdminDash.storyboard
@@ -62,8 +62,8 @@
                                     <nil key="highlightedColor"/>
                                 </variation>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfw-v5-EVd">
-                                <rect key="frame" x="208" y="216" width="50" height="36"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfw-v5-EVd">
+                                <rect key="frame" x="208" y="216" width="51" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="JgY-EX-5i5"/>
                                 </constraints>
@@ -133,11 +133,48 @@
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eel-tf-Xdv">
+                                <rect key="frame" x="263" y="217" width="126" height="34"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" systemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="12"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XGT-ft-AOH">
+                                <rect key="frame" x="251" y="305" width="104" height="34"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" systemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="12"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tKs-j0-asI">
+                                <rect key="frame" x="280" y="343" width="104" height="34"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" systemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="12"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3i9-mU-dO2">
+                                <rect key="frame" x="289" y="392" width="104" height="34"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" systemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="12"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bx4-pf-Oru">
+                                <rect key="frame" x="251" y="261" width="104" height="34"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" systemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="12"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="2ew-hj-9ix"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="XGT-ft-AOH" firstAttribute="centerY" secondItem="BeI-pq-p6p" secondAttribute="centerY" id="3eR-A0-OfF"/>
                             <constraint firstItem="D59-GY-d3J" firstAttribute="leading" secondItem="3Pw-25-gOb" secondAttribute="leading" id="5qu-Z6-iUW"/>
+                            <constraint firstItem="XGT-ft-AOH" firstAttribute="trailing" secondItem="xa8-U6-QYk" secondAttribute="trailing" id="6Gd-i7-ZIJ"/>
                             <constraint firstItem="xa8-U6-QYk" firstAttribute="leading" secondItem="2ew-hj-9ix" secondAttribute="leading" constant="286" id="6mK-Mi-qC3"/>
                             <constraint firstItem="sfw-v5-EVd" firstAttribute="top" secondItem="3Pw-25-gOb" secondAttribute="bottom" constant="19" id="6rh-QL-cZ5"/>
                             <constraint firstItem="2ew-hj-9ix" firstAttribute="trailing" secondItem="lq9-et-GTA" secondAttribute="trailing" constant="79" id="7C1-EF-wgt"/>
@@ -146,43 +183,64 @@
                             <constraint firstItem="BeI-pq-p6p" firstAttribute="leading" secondItem="5C7-Co-T2v" secondAttribute="leading" id="EqR-oa-TOG"/>
                             <constraint firstAttribute="trailing" secondItem="h6S-9m-ke6" secondAttribute="trailing" id="FHm-Vr-xcn"/>
                             <constraint firstItem="D59-GY-d3J" firstAttribute="top" secondItem="XK6-jF-JSd" secondAttribute="bottom" constant="33" id="FkT-2j-hPH"/>
+                            <constraint firstItem="tKs-j0-asI" firstAttribute="leading" secondItem="2ew-hj-9ix" secondAttribute="leading" constant="280" id="GO4-Iu-hHw"/>
                             <constraint firstItem="BeI-pq-p6p" firstAttribute="top" secondItem="Mbn-nl-RFz" secondAttribute="bottom" constant="8" symbolic="YES" id="Gyj-yP-dpp"/>
                             <constraint firstItem="FKy-dn-8sW" firstAttribute="top" secondItem="2ew-hj-9ix" secondAttribute="top" constant="61" id="H3c-nz-N3F"/>
+                            <constraint firstItem="eel-tf-Xdv" firstAttribute="leading" secondItem="sfw-v5-EVd" secondAttribute="trailing" id="KK7-Oa-6KX"/>
+                            <constraint firstItem="2ew-hj-9ix" firstAttribute="trailing" secondItem="eel-tf-Xdv" secondAttribute="trailing" constant="4" id="LP7-5p-7zs"/>
                             <constraint firstItem="3Pw-25-gOb" firstAttribute="centerX" secondItem="sfw-v5-EVd" secondAttribute="centerX" id="Mbw-eT-a98"/>
                             <constraint firstItem="XK6-jF-JSd" firstAttribute="centerX" secondItem="sRk-6r-n3n" secondAttribute="centerX" id="Mbx-LC-ccg"/>
+                            <constraint firstItem="2ew-hj-9ix" firstAttribute="trailing" secondItem="tKs-j0-asI" secondAttribute="trailing" constant="9" id="MlF-qW-BAq"/>
+                            <constraint firstItem="3i9-mU-dO2" firstAttribute="trailing" secondItem="h6S-9m-ke6" secondAttribute="trailing" id="O7E-je-Yfy"/>
                             <constraint firstItem="Mbn-nl-RFz" firstAttribute="trailing" secondItem="BeI-pq-p6p" secondAttribute="trailing" id="POb-Nh-Vz8"/>
                             <constraint firstItem="h6S-9m-ke6" firstAttribute="leading" secondItem="XK6-jF-JSd" secondAttribute="trailing" constant="3" id="QPS-0u-NAI"/>
                             <constraint firstItem="3Pw-25-gOb" firstAttribute="top" secondItem="D59-GY-d3J" secondAttribute="bottom" constant="8" symbolic="YES" id="Qhb-Xf-e7r"/>
                             <constraint firstItem="Yv0-Tx-dZd" firstAttribute="top" secondItem="lq9-et-GTA" secondAttribute="bottom" constant="19" id="RDN-c4-J2i"/>
                             <constraint firstItem="2ew-hj-9ix" firstAttribute="bottom" secondItem="xa8-U6-QYk" secondAttribute="bottom" constant="296" id="RWA-cj-0U1"/>
                             <constraint firstItem="2ew-hj-9ix" firstAttribute="trailing" secondItem="xa8-U6-QYk" secondAttribute="trailing" constant="38" id="RzG-O8-OMg"/>
+                            <constraint firstItem="bx4-pf-Oru" firstAttribute="top" secondItem="eel-tf-Xdv" secondAttribute="bottom" constant="10" id="T4U-e3-NW8"/>
                             <constraint firstItem="5C7-Co-T2v" firstAttribute="centerX" secondItem="lq9-et-GTA" secondAttribute="centerX" id="UXq-Gm-eMb"/>
                             <constraint firstItem="sfw-v5-EVd" firstAttribute="leading" secondItem="Mbn-nl-RFz" secondAttribute="leading" id="XGN-MU-xjx"/>
                             <constraint firstItem="Mbn-nl-RFz" firstAttribute="leading" secondItem="BeI-pq-p6p" secondAttribute="leading" id="YGW-cJ-NNx"/>
+                            <constraint firstItem="3i9-mU-dO2" firstAttribute="centerY" secondItem="lq9-et-GTA" secondAttribute="centerY" id="YP3-T8-cHA"/>
+                            <constraint firstItem="3i9-mU-dO2" firstAttribute="top" secondItem="tKs-j0-asI" secondAttribute="bottom" constant="15" id="Z2f-UK-Cs2"/>
                             <constraint firstItem="lq9-et-GTA" firstAttribute="top" secondItem="5C7-Co-T2v" secondAttribute="bottom" constant="14" id="aIh-V3-jIW"/>
+                            <constraint firstItem="5C7-Co-T2v" firstAttribute="top" secondItem="XGT-ft-AOH" secondAttribute="bottom" constant="2" id="av9-0Z-F8Q"/>
                             <constraint firstItem="BeI-pq-p6p" firstAttribute="leading" secondItem="2ew-hj-9ix" secondAttribute="leading" constant="208" id="eCp-to-ssT"/>
+                            <constraint firstItem="tKs-j0-asI" firstAttribute="top" secondItem="XGT-ft-AOH" secondAttribute="bottom" constant="4" id="eig-Av-iVk"/>
                             <constraint firstItem="XK6-jF-JSd" firstAttribute="leading" secondItem="Yv0-Tx-dZd" secondAttribute="leading" id="gVs-Gk-mUa"/>
                             <constraint firstItem="sfw-v5-EVd" firstAttribute="trailing" secondItem="Mbn-nl-RFz" secondAttribute="trailing" id="goB-mg-KWI"/>
                             <constraint firstItem="xa8-U6-QYk" firstAttribute="top" secondItem="Yv0-Tx-dZd" secondAttribute="bottom" constant="28" id="gwj-Jm-HgJ"/>
+                            <constraint firstItem="eel-tf-Xdv" firstAttribute="centerY" secondItem="sfw-v5-EVd" secondAttribute="centerY" id="iVx-J7-ZoD"/>
                             <constraint firstItem="3Pw-25-gOb" firstAttribute="leading" secondItem="sfw-v5-EVd" secondAttribute="leading" id="jko-7G-AxL"/>
                             <constraint firstItem="XK6-jF-JSd" firstAttribute="bottom" secondItem="h6S-9m-ke6" secondAttribute="bottom" id="oeR-Vo-AcB"/>
+                            <constraint firstItem="bx4-pf-Oru" firstAttribute="leading" secondItem="XGT-ft-AOH" secondAttribute="leading" id="q82-vi-0bH"/>
+                            <constraint firstItem="eel-tf-Xdv" firstAttribute="leading" secondItem="sfw-v5-EVd" secondAttribute="trailing" constant="4" id="rUK-9l-NO2"/>
+                            <constraint firstItem="bx4-pf-Oru" firstAttribute="centerY" secondItem="Mbn-nl-RFz" secondAttribute="centerY" id="sV1-nV-Or0"/>
                             <constraint firstItem="5C7-Co-T2v" firstAttribute="top" secondItem="BeI-pq-p6p" secondAttribute="bottom" constant="1" id="tE9-Ei-a3F"/>
                             <constraint firstItem="lq9-et-GTA" firstAttribute="leading" secondItem="2ew-hj-9ix" secondAttribute="leading" constant="179" id="tZV-n3-Zfr"/>
                             <constraint firstItem="D59-GY-d3J" firstAttribute="leading" secondItem="FKy-dn-8sW" secondAttribute="trailing" constant="46" id="ubM-06-U9Y"/>
+                            <constraint firstItem="bx4-pf-Oru" firstAttribute="leading" secondItem="h6S-9m-ke6" secondAttribute="leading" id="vTN-2u-WaI"/>
+                            <constraint firstItem="3i9-mU-dO2" firstAttribute="leading" secondItem="2ew-hj-9ix" secondAttribute="leading" constant="289" id="vgo-6D-0Tg"/>
+                            <constraint firstItem="bx4-pf-Oru" firstAttribute="trailing" secondItem="XGT-ft-AOH" secondAttribute="trailing" id="xBh-P7-g0V"/>
+                            <constraint firstItem="bx4-pf-Oru" firstAttribute="top" secondItem="sfw-v5-EVd" secondAttribute="bottom" constant="9" id="yBN-G9-g6o"/>
+                            <constraint firstItem="tKs-j0-asI" firstAttribute="bottom" secondItem="5C7-Co-T2v" secondAttribute="bottom" id="ytT-cA-cah"/>
                             <constraint firstItem="D59-GY-d3J" firstAttribute="top" secondItem="2ew-hj-9ix" secondAttribute="top" constant="10" id="zy7-jr-Nrn"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="C5E-TI-7bZ"/>
                     <connections>
-                        <outlet property="joinDateLabel" destination="lq9-et-GTA" id="UnG-fz-yuQ"/>
-                        <outlet property="locationLabel" destination="5C7-Co-T2v" id="jFp-Li-gY5"/>
-                        <outlet property="nameLabel" destination="sfw-v5-EVd" id="dQb-ht-gH4"/>
-                        <outlet property="roleLabel" destination="BeI-pq-p6p" id="HAK-LU-mLf"/>
+                        <outlet property="ageTextField" destination="bx4-pf-Oru" id="sUY-Jk-3bV"/>
+                        <outlet property="deleteButton" destination="h6S-9m-ke6" id="kLP-1X-iEj"/>
+                        <outlet property="joinDateTextField" destination="3i9-mU-dO2" id="GoW-IT-pdj"/>
+                        <outlet property="locationTextField" destination="tKs-j0-asI" id="0aO-tL-zpJ"/>
+                        <outlet property="nameTextField" destination="eel-tf-Xdv" id="PfL-WT-Aa7"/>
+                        <outlet property="roleTextField" destination="XGT-ft-AOH" id="mcY-po-tTf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Qk-VM-hn7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3118" y="23"/>
+            <point key="canvasLocation" x="3116.7938931297708" y="22.535211267605636"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GWj-Yd-dgV">
@@ -256,7 +314,7 @@
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" title="Edit"/>
                                             <connections>
-                                                <segue destination="bxA-pB-k2w" kind="push" id="ArO-3v-bUe"/>
+                                                <segue destination="bxA-pB-k2w" kind="push" identifier="showUserDetails" id="ArO-3v-bUe"/>
                                             </connections>
                                         </button>
                                     </subviews>
@@ -306,6 +364,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="darkTextColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
